# interstellar-command

./: .gitignore  Cargo.toml  FIX_SUMMARY.md  HOW_TO_PLAY.md  IMPLEMENTATION_STATUS.md  LICENSE  QUICKSTART.md  README.md  VISUALIZATION_GUIDE.md  example_save_levels.json  fix_compilation.sh  game_simulation_ap.py  gameplay.md  mysql_schema.sql  play.sh  run.bat  run.sh  summary.md  update.sh
backend/: Cargo.toml
backend/src/: game.rs  main.rs  websocket.rs
frontend/: game.js  index.html  manifest.json  map.js  style.css
src/: ai.rs  database.rs  fleet.rs  lib.rs  main.rs  persistence.rs  visualization.rs
src/core/: actions.rs  game.rs  mod.rs  player.rs  turn.rs
src/map/: galaxy.rs  mod.rs  sector.rs
